# bw25_playground

./: .gitignore  README.md  main.py  pyproject.toml
data/ecoinvent 3.10.1_cutoff_ecoSpold02/: FilenameToActivityLookup.csv
data/ecoinvent 3.10.1_cutoff_ecoSpold02/MasterData/: ActivityNames.xml  Companies.xml  Geographies.xml  ImpactMethods.xml  Parameters.xml  Persons.xml  Properties.xml  Sources.xml  Tags.xml
data/ecoinvent 3.10.1_cutoff_ecoSpold02/datasets/: 0001d8d8-b866-569f-9e2c-a7cd515dae93_66c93e71-f32b-4591-901c-55395db5c132.spold  00037fbd-2a84-51b6-8569-2f81a0bcff3f_deacf25b-6aee-5105-893d-b78661769ca8.spold  00059126-867b-5cdf-a712-a9ddb34dfeb3_6c365ae3-f8cb-4aff-8709-afea7fbf0a40.spold  00061ae7-731f-583b-ae79-58a9e538c6ed_4c2bb0f0-422d-4fb3-bcfe-a36ef1b55874.spold  00074d4b-c8df-5be0-8b9d-b1444481f9da_5357a067-f798-46fb-97b0-fa18f723341b.spold  0011f8ae-7513-5fb7-bec3-23517a8f8b43_66c93e71-f32b-4591-901c-55395db5c132.spold  0012b434-7477-5e9a-ac69-bd9aba5251ff_449726a6-8ebe-4eb7-98f7-25498ae3fd21.spold  00147142-3be9-5e9e-b38c-1f6656327851_1570a766-fe08-427f-94cb-6947995117ec.spold  0015290b-8d0f-5961-9303-acbc8595d231_744c5346-fd59-430c-964d-2504bf788663.spold  00188027-267d-5a71-be5f-23d1bcccb5bc_291fc06d-1b3e-4077-aabb-346b588ed24b.spold  (+23513 more)
demos/lca_neo4j_linking/: README.md  extract.py  link.py  run_demo.py  seed_domain.py
input/: methods.csv
original tutorials from bw developers/: 2 - Importing data.ipynb  3 - Building and using matrices in bw2calc.ipynb
scripts/: bootstrap_bw.py
tutorials/: 1 - The supply chain graph.ipynb
